# tenodera

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  README.md  SEC.md  SECURITY.md  THREAT_MODEL.md  deny.toml  install-bridge.sh  install-panel.sh  tenodera-agent.sh  tenodera-bridge.sh  tenodera-panel.sh  tenodera.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
agent/: Cargo.toml  Makefile  README.md
agent/src/: config.rs  identity.rs  lib.rs  main.rs  router.rs  util.rs
agent/src/handlers/: audit_query.rs  certs.rs  chrony.rs  containers.rs  cron.rs  dns.rs  file_list.rs  file_ops.rs  hardware_info.rs  host_config.rs  hosts.rs  journal_query.rs  kdump.rs  log_files.rs  metrics_snapshot.rs  metrics_stream.rs  mod.rs  network_stats.rs  networking.rs  networking_snapshot.rs  packages.rs  security.rs  ssh_manage.rs  storage.rs  storage_du.rs  storage_manage.rs  storage_snapshot.rs  superuser_verify.rs  system_info.rs  system_pubkey.rs  system_settings.rs  systemd_timers.rs  systemd_units.rs  terminal_pty.rs  timesync.rs  top_processes.rs  users.rs
agent/systemd/: tenodera-agent.service
bridge/: Cargo.toml  Makefile  README.md
bridge/src/: config.rs  main.rs  router.rs  util.rs
bridge/src/handlers/: certs.rs  cron.rs  dns.rs  host_config.rs  hosts.rs  mod.rs  networking.rs  packages.rs  system_pubkey.rs  system_time.rs  systemd_timers.rs  systemd_units.rs  terminal_pty.rs  users.rs
bridge/systemd/: tenodera-bridge.service
docs/: CHANGELOG.md  DOCS.md  THREAT_MODEL.md
docs/adr/: 0001-ssh-bridge-transport.md  0002-postgresql-control-plane.md  0003-host-enrollment-ssh-ca.md  0004-identity-and-credential-model.md  0005-typed-operation-protocol.md  0006-rbac.md  0007-audit-event-storage.md  README.md
docs/architecture/: SSH_BRIDGE_RETROSPECTIVE.md  TENODERA_V2.md
docs/archive/security/2026-07-23/: ANALISE.md  README.md  SECURITY_AUDIT_TRIAGE.md
packaging/: tenodera-agent.spec  tenodera-bridge.spec  tenodera-caddy-setup.service  tenodera-gateway.spec  tenodera-setup-caddy.sh  tenodera.spec
packaging/deb/: tenodera-agent.postinst  tenodera-agent.postrm  tenodera-agent.prerm  tenodera.pam  tenodera.postinst  tenodera.postrm  tenodera.preinst  tenodera.prerm
panel/: Cargo.toml  Makefile
panel/crates/gateway/: Cargo.toml  README.md
panel/crates/gateway/src/: agent_auth.rs  agent_registry.rs  agent_ws.rs  auth.rs  bridge_registry.rs  bridge_transport.rs  bridge_ws.rs  config.rs  hosts_config.rs  main.rs  pam.rs  rate_limit.rs  security_headers.rs  session.rs  tls.rs  ws.rs
panel/crates/pam-helper/: Cargo.toml
panel/crates/pam-helper/src/: main.rs
panel/pam.d/: tenodera
panel/systemd/: README.md  tenodera-gateway.service  tenodera.service
panel/ui/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
panel/ui/src/: App.tsx  index.css  nav.ts
panel/ui/src/api/: auth.ts  primaryIp.ts  secureStorage.ts  transport.ts  useRequest.ts
panel/ui/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  Icons.tsx  PageHeader.tsx  RestrictedNotice.tsx  Sidebar.tsx  SuperuserModal.tsx  Tabs.tsx  TopBar.tsx
panel/ui/src/contexts/: RoleContext.ts  ThemeContext.tsx  ToastContext.tsx
panel/ui/src/hooks/: useHosts.ts  useSuperuser.ts  useTabParam.ts
panel/ui/src/pages/: ApiDocs.tsx  Audit.tsx  Certificates.tsx  ContainerExec.tsx  Containers.tsx  Cron.tsx  DNS.tsx  Dashboard.tsx  Files.tsx  Hosts.tsx  Kdump.tsx  LogFiles.tsx  Login.tsx  Logs.tsx  Management.tsx  Networking.tsx  Packages.tsx  Security.tsx  Services.tsx  Shell.tsx  Ssh.tsx  Storage.tsx  StorageMounts.tsx  StorageUsage.tsx  System.tsx  SystemChrony.tsx  SystemTimeSync.tsx  Terminal.tsx  Users.tsx
protocol/: README.md
protocol/src/: auth.rs  channel.rs  lib.rs  message.rs
v2/: Cargo.toml  README.md
v2/crates/bridge/: Cargo.toml
v2/crates/bridge/src/: main.rs
v2/crates/op-helper/: Cargo.toml
v2/crates/op-helper/src/: main.rs
v2/crates/pam-helper/: Cargo.toml
v2/crates/pam-helper/src/: main.rs
v2/crates/protocol/: Cargo.toml
v2/crates/protocol/src/: lib.rs
v2/crates/server/: Cargo.toml
v2/crates/server/src/: audit.rs  auth.rs  hosts.rs  main.rs  oidc.rs  ops.rs  rbac.rs  signer.rs  ssh.rs
v2/crates/server/web/: index.html
v2/crates/signer/: Cargo.toml
v2/crates/signer/src/: main.rs
v2/migrations/: 0001_core.sql  0002_audit_seq.sql  0003_constraints.sql
