[package]
name = "tenodera-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tenodera-agent"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { path = "../protocol" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
nix = { version = "0.31", features = ["user", "hostname", "term"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libc = "0.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"
futures = "0.3"
ed25519-dalek = { version = "3", features = ["zeroize"] }
getrandom = "0.4"
sha2 = "0.11"
