[workspace]
resolver = "2"
members = [
    "crates/gateway",
    "crates/pam-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.7", features = ["fs", "cors", "trace", "compression-gzip", "compression-br"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
zeroize = "1"
tempfile = "3"
pam-client = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "3", features = ["zeroize"] }
getrandom = "0.4"
sha2 = "0.11"

# Internal crates
tenodera-protocol = { path = "./protocol" }

# Release build tuned for small, low-overhead binaries (weak-hardware targets):
# thin LTO + single codegen unit for tighter code, and strip symbols to shrink the
# on-disk/mmap footprint. opt-level stays at the default 3 (CPU is scarce on the
# target VMs, so favour speed) and panic stays `unwind` — abort would let one
# panicking task kill the whole gateway and drop every session.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
