[package]
name = "tenodera-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tenodera-gateway"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
