[package]
name = "tenodera-protocol"
version = "0.1.0"
edition = "2021"
description = "Tenodera v2 wire protocol — typed operations, execution grants, shared by server/bridge/op-helper."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["serde", "v4"] }
ed25519-dalek = "2"
getrandom = "0.3"
